[notice] fixed notice.text is not aligned with label, if has no title

--- a/semcore/notice/src/style/notice.shadow.css
+++ b/semcore/notice/src/style/notice.shadow.css
@@ -136,3 +136,8 @@ SText {
   margin-top: var(--intergalactic-spacing-05x, 2px);
   margin-bottom: var(--intergalactic-spacing-05x, 2px);
 }
+
+SText[withoutTitle] {
+  margin-top: var(--intergalactic-spacing-05x, 2px);
+  margin-bottom: var(--intergalactic-spacing-05x, 2px);
+}
